# MCSkinViewer

./: .gitignore  Assets.h  CMakeLists.txt  FileSystem.cpp  FileSystem.h  LICENSE  MinecraftSkin.cpp  MinecraftSkin.h  README.md  Renderer.cpp  Renderer.h  State.h  UserInterface.cpp  UserInterface.h  main.cpp
assets/: discard.fs  player_slim.gltf  player_wide.gltf
